--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,19 +7,17 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-header {
-  background-color: #2d2d2d;
-  padding: 1rem;
-}
-
-header a {
-  color: #fff;
-  font-weight: bold;
-  text-decoration: none;
+.site-container {
+  min-height: 100vh;
 }
 
 .main {
-  padding: 1rem;
+  flex: 1;
+}
+
+.btn-primary {
+  background-color: #f0c040;
+  color: black;
 }
 
 .products {
@@ -40,4 +38,8 @@ header a {
 
 .product-info {
   padding: 1rem;
+}
+
+.rating span {
+  color: gold;
 }
